@@ -1,8 +1,10 @@
 package sk.stuba.fiit.inventory;
 
+import org.slf4j.Logger;
 import sk.stuba.fiit.characters.Character;
 import sk.stuba.fiit.characters.Knight;
 import sk.stuba.fiit.characters.PlayerCharacter;
+import sk.stuba.fiit.core.GameLogger;
 import sk.stuba.fiit.items.Item;
 import sk.stuba.fiit.util.Vector2D;
 import sk.stuba.fiit.world.Level;
@@ -18,6 +20,7 @@ public class Inventory {
     private List<Item> items;
     private int selectedSlot = 0;
     private PlayerCharacter baseCharacter;
+    private static final Logger log = GameLogger.get(Inventory.class);
 
     public Inventory(int totalSlots) {
         this.totalSlots = totalSlots;
@@ -35,23 +38,40 @@ public class Inventory {
             baseCharacter = character;
             characters.add(character);
             if (activeCharacter == null) activeCharacter = character;
+            log.info("Base character added: name={}", character.getName());
             return true;
         }
         int cost = 3;
-        if (usedSlots + cost > totalSlots) return false;
+        if (usedSlots + cost > totalSlots) {
+            log.warn("Cannot add character – not enough slots: character={}, cost={}, used={}, total={}",
+                character.getName(), cost, usedSlots, totalSlots);
+            return false;
+        }
         characters.add(character);
         if (activeCharacter == null) activeCharacter = character;
         usedSlots += cost;
+        log.info("Character added: name={}, slotsUsed={}/{}",
+            character.getName(), usedSlots, totalSlots);
         return true;
     }
 
     public boolean removeCharacter(PlayerCharacter character) {
-        if (character == baseCharacter) return false;
-        if (!characters.remove(character)) return false;
+        if (character == baseCharacter) {
+            log.warn("Cannot remove base character: name={}", character.getName());
+            return false;
+        }
+        if (!characters.remove(character)) {
+            log.warn("Character not found in inventory: name={}", character.getName());
+            return false;
+        }
         usedSlots -= 3;
         if (activeCharacter == character) {
-            activeCharacter = characters.isEmpty() ? null : characters.get(0);
+            activeCharacter = characters.isEmpty() ? null : characters.getFirst();
+            log.info("Active character changed after removal: newActive={}",
+                activeCharacter != null ? activeCharacter.getName() : "none");
         }
+        log.info("Character removed: name={}, slotsUsed={}/{}",
+            character.getName(), usedSlots, totalSlots);
         return true;
     }
 
@@ -61,18 +81,29 @@ public class Inventory {
 
     public boolean addItem(Item item) {
         int cost = item.getSlotsRequired();
-        if (usedSlots + cost > totalSlots) return false;
+        if (usedSlots + cost > totalSlots) {
+            log.warn("Cannot add item – not enough slots: item={}, cost={}, used={}, total={}",
+                item.getClass().getSimpleName(), cost, usedSlots, totalSlots);
+            return false;
+        }
         items.add(item);
         usedSlots += cost;
+        log.info("Item added: item={}, slotsUsed={}/{}",
+            item.getClass().getSimpleName(), usedSlots, totalSlots);
         return true;
     }
 
     public void removeItem(Item item) {
         if (items.remove(item)) {
             usedSlots -= item.getSlotsRequired();
+            log.info("Item removed: item={}, slotsUsed={}/{}",
+                item.getClass().getSimpleName(), usedSlots, totalSlots);
             if (selectedSlot >= items.size() && selectedSlot > 0) {
                 selectedSlot = items.size() - 1;
             }
+        }else {
+            log.warn("Attempted to remove item not in inventory: item={}",
+                item.getClass().getSimpleName());
         }
     }
 
@@ -101,11 +132,21 @@ public class Inventory {
     public void switchCharacter(int key) {
         if (key >= 1 && key <= characters.size()) {
             PlayerCharacter next = characters.get(key - 1);
-            if (next == activeCharacter) return;
+            if (next == activeCharacter) {
+                if (log.isDebugEnabled()) {
+                    log.debug("switchCharacter – already active: name={}", next.getName());
+                }
+                return;
+            }
+            log.info("Character switched: from={}, to={}, key={}",
+                activeCharacter.getName(), next.getName(), key);
             next.setPosition(activeCharacter.getPosition());
             next.setFacingRight(activeCharacter.isFacingRight());
             next.updateHitbox();
             activeCharacter = next;
+        }else {
+            log.warn("switchCharacter – invalid key: key={}, partySize={}",
+                key, characters.size());
         }
     }
 
@@ -114,6 +155,8 @@ public class Inventory {
         boolean  currentFacing   = activeCharacter.isFacingRight();
         for (PlayerCharacter c : characters) {
             if (c != activeCharacter && c.isAlive()) {
+                log.info("Auto-switched to next alive: from={}, to={}",
+                    activeCharacter.getName(), c.getName());
                 c.setPosition(currentPosition);
                 c.setFacingRight(currentFacing);
                 c.updateHitbox();
@@ -121,6 +164,7 @@ public class Inventory {
                 return true;
             }
         }
+        log.warn("No alive characters to switch to – party defeated");
         return false;
     }
 
